# dark-factory-governance

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODEOWNERS  DEVELOPER_GUIDE.md  GOALS.md  LICENSE  README.md  config.yaml  init.md  init.ps1  init.sh  instructions.md  mkdocs.yml  project.yaml  startup.md
.governance/: README.md  policy-engine.py
.plans/: 100-autonomy-metrics.md  109-command-prompt-install.md  127-reconcile-docs.md  128-bootstrap-workflows-validation.md  136-init-python-cmd.md  142-persona-effectiveness-schema.md  155-enforce-governance-pipeline.md  167-reduced-touchpoint-model.md  170-conflict-detection-schema.md  173-merge-sequencing-policy.md  178-governance-workflow-health-check.md  181-parallel-session-protocol.md  195-panel-tool-execution.md  196-emission-examples.md  203-simplify-developer-guide.md  21-ai-expert-review-panel.md  222-cleanup-root.md  40-readme-status-update.md  43-context-management.md  53-evaluate-personas-panels.md  54-mandatory-panels.md  (+6 more)
governance/engine/: __init__.py  message_signing.py  multi_model_aggregator.py  policy_engine.py  pyproject.toml  security_prefilter.py  supply_chain.py
governance/engine/tests/: conftest.py  test_agentic_protocol.py  test_canary_calibration.py  test_config.py  test_context_management.py  test_governance_artifacts.py  test_jit_loading.py  test_message_signing.py  test_migration.py  test_multi_model.py  test_persona_structure.py  test_policy_engine.py  test_prompt_eval.py  test_property_based.py  test_schema_validation.py  test_security_prefilter.py  test_state_persistence.py  test_supply_chain.py
(+476 files in other folders)
