[project]
name = "dark-factory-engine"
version = "1.0.0"
description = "Dark Factory Policy Engine — evaluate panel emissions against policy profiles"
requires-python = ">=3.12"

dependencies = [
    "jsonschema>=4.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
